--- a/kernel/memory/7. VMA/2. 插入VMA.md
+++ b/kernel/memory/7. VMA/2. 插入VMA.md
@@ -90,4 +90,4 @@ find_vma_links()函数为新vma查找合适的插入位置。
 
 第30行代码，__rb_parent指向找到的待插入节点的父节点。
 
-注意，这里是用来二级和三级指针作为形参，例如find_vma_links()函数的rb_parent是二级指针作为形参，rb_link是三级指针作为形参，这里很容易混淆，以rb_link为例，如图2.12所示，假设rb_link指针本身
+注意，这里是用来二级和三级指针作为形参，例如find_vma_links()函数的rb_parent是二级指针作为形参，rb_link是三级指针作为形参，这里很容易混淆，以rb_link为例，如图2.12所示，假设rb_link指针本身地址为0x5555，它在insert_vm_struct()函数中是一个二级指针，并且是局部变量，把rb_link指针的地址0x5555作为形参传递给find_vma_links()函数
