增加插入VMA的东西

--- a/kernel/memory/7. VMA/2. 插入VMA.md
+++ b/kernel/memory/7. VMA/2. 插入VMA.md
@@ -86,8 +86,16 @@ find_vma_links()函数为新vma查找合适的插入位置。
 
 第28行代码，rb_prev指向待插入节点的前继节点，这里获取前继节点的结构体。
 
-第29行代码，*rb_link指向__rb_parent->rb_right或__rb_parent->rb_left指针本身的结构体
+第29行代码，*rb_link指向__rb_parent->rb_right或 __rb_parent->rb_left指针本身的结构体
 
 第30行代码，__rb_parent指向找到的待插入节点的父节点。
 
-注意，这里是用来二级和三级指针作为形参，例如find_vma_links()函数的rb_parent是二级指针作为形参，rb_link是三级指针作为形参，这里很容易混淆，以rb_link为例，如图2.12所示，假设rb_link指针本身地址为0x5555，它在insert_vm_struct()函数中是一个二级指针，并且是局部变量，把rb_link指针的地址0x5555作为形参传递给find_vma_links()函数
+注意，这里是用来二级和三级指针作为形参，例如find_vma_links()函数的rb_parent是二级指针作为形参，rb_link是三级指针作为形参，这里很容易混淆，以rb_link为例，如图2.12所示，假设rb_link指针本身地址为0x5555，它在insert_vm_struct()函数中是一个二级指针，并且是局部变量，把rb_link指针的地址0x5555作为形参传递给find_vma_links()函数。指针函数作为函数形参调用时会分配一个副本，假设副本名字为rb_link1，这是rb_link1指向地址0x5555。find_vma_links()函数第29行代码让*rb_link1指向__rb_parent->rb_right或者 __rb_parent->rb_left指针本身的地址，可以理解为地址0x5555存在一个指针，该指针指向__rb_parent->rb_right或  __rb_parent->rb_left指针本身的地址。
+
+所以find_vma_links()函数返回之后，rb_link指向__rb_parent->rb_right或  `__rb_parent->rb_left`指针本身的地址。*rb_link便可以指向`__rb_parent->rb_right`或  `__rb_parent->rb_left`指针指向的节点，在__vma_link()->__vma_link_rb()->rb_link_node()会使用到。
+
+find_vma_links()函数主要贡献是精确的找到了新VMA要加入某个节点的子节点上，rb_parent指针指向要插入的节点的父节点；rb_link要指向要插入节点指针的本身地址；pprev指针指向要插入的节点的父节点的指向的VMA数据结构，如图2.13所示。
+
+在Linux内核代码中经常使用二级指针，Linux内核创始人linus torvalds曾经公开批评过许多内核开发者不会使用指针的指针。可见二级指针在Linux内核中的重要性，二级指针在Linux内核中主要两种用法，一是作为函数形参，例如上述的find_vma_links()函数；二是链表操作，例如RCU的代码。下面是用二级指针实现的一个简单链表操作的例子，忽略了异常处理部分。
+
+![](picture/多级指针作为函数形参.png)![多级指针作为函数形参](picture/多级指针作为函数形参.png)
