--- a/kernel/memory/7. VMA/2. 插入VMA.md
+++ b/kernel/memory/7. VMA/2. 插入VMA.md
@@ -147,6 +147,31 @@ int main()
 回到insert_vm_struct()函数中，找到要插入的节点后可以调用vma_link()函数加入红黑树中。
 
 ```
-static void vma_link(struct mm_struct *mm, struct vm_area_struct *vma, struct )
+static void vma_link(struct mm_struct *mm, struct vm_area_struct *vma, struct vm_area_struct *prev, struct rb_node **rb_link, struct rb_node *rb_parent)
+{
+	struct address_space *mapping = NULL;
+	
+	if(vma->vm_file) {
+		mapping = vma->vm_file->f_mapping;
+		i_mmap_lock_write(mapping);
+	}
+	
+	__vma_link(mm, vma, prev, rb_link, rb_parent);
+	__vma_link_file(vma);
+	
+	if(mapping)
+		i_mmap_unlock_write(mapping);
+		
+	mm->map_count++;
+	validate_mm(mm);
+}
 ```
+
+vma_link()通过__vma_link()添加到红黑树和链表中，  \`__vma_link_file()` 把vma添加到文件的基数树（Radix Tree）上，我们先忽略它。
+
+```
+
+```
+
+
 
