--- a/kernel/memory/7. VMA/2. 插入VMA.md
+++ b/kernel/memory/7. VMA/2. 插入VMA.md
@@ -170,8 +170,84 @@ static void vma_link(struct mm_struct *mm, struct vm_area_struct *vma, struct vm
 vma_link()通过__vma_link()添加到红黑树和链表中，  \`__vma_link_file()` 把vma添加到文件的基数树（Radix Tree）上，我们先忽略它。
 
 ```
+static void
+__vma_link(struct mm_struct *mm, struct vm_area_struct *vma,
+	struct vm_area_struct *prev, struct rb_node **rb_link,
+	struct rb_node *rb_parent)
+{
+	__vma_link_list(mm, vma, prev, rb_parent);
+	__vma_link_rb(mm, vma, rb_link, rb_parent);
+}
+```
+
+__vma_link()函数调用  __vma_link_list()，把vma添加到mm->mmap链表中。
 
 ```
+void __vma_link_list(struct mm_struct *mm, struct vm_area_struct *vma,
+		struct vm_area_struct *prev, struct rb_node *rb_parent)
+{
+	struct vm_area_struct *next;
+
+	vma->vm_prev = prev;
+	if (prev) {
+		next = prev->vm_next;
+		prev->vm_next = vma;
+	} else {
+		mm->mmap = vma;
+		if (rb_parent)
+			next = rb_entry(rb_parent,
+					struct vm_area_struct, vm_rb);
+		else
+			next = NULL;
+	}
+	vma->vm_next = next;
+	if (next)
+		next->vm_prev = vma;
+}
+```
+
+__vma_link_rb()则是把vma插入红黑树中。
+
+```
+void __vma_link_rb(struct mm_struct *mm, struct vm_area_struct *vma,
+		struct rb_node **rb_link, struct rb_node *rb_parent)
+{
+	/* Update tracking information for the gap following the new vma. */
+	if (vma->vm_next)
+		vma_gap_update(vma->vm_next);
+	else
+		mm->highest_vm_end = vma->vm_end;
+
+	/*
+	 * vma->vm_prev wasn't known when we followed the rbtree to find the
+	 * correct insertion point for that vma. As a result, we could not
+	 * update the vma vm_rb parents rb_subtree_gap values on the way down.
+	 * So, we first insert the vma with a zero rb_subtree_gap value
+	 * (to be consistent with what we did on the way down), and then
+	 * immediately update the gap to the correct value. Finally we
+	 * rebalance the rbtree after all augmented values have been set.
+	 */
+	rb_link_node(&vma->vm_rb, rb_parent, rb_link);
+	vma->rb_subtree_gap = 0;
+	vma_gap_update(vma);
+	vma_rb_insert(vma, &mm->mm_rb);
+}
+```
+
+最后通过调用红黑树的API接口rb_link_node()和__rb_insert()来完成，vma_rb_insert()最终会调用到__rb_insert()来完成插入动作。
+
+```
+static inline void rb_link_node(struct rb_node * node, struct rb_node * parent,
+				struct rb_node ** rb_link)
+{
+	node->__rb_parent_color = (unsigned long)parent;
+	node->rb_left = node->rb_right = NULL;
+
+	*rb_link = node;
+}
+```
+
+之前提到的rb_link指向要插入节点的指针本身的地址，而node是新插入的节点，因此"*rb_link=node"就把node节点插入红黑树中了。
 
 
 
