--- a/kernel/memory/7. VMA/4. 红黑树例子.md
+++ b/kernel/memory/7. VMA/4. 红黑树例子.md
@@ -28,5 +28,22 @@ struct mytype{
 	int key;
 };
 
+/*红黑树根节点*/
+struct rb_root_mytree = RB_ROOT;
+/*根据key来查找节点*/
+struct mytype *my_serach(struct rb_root *root, int new)
+{
+	struct rb_node *node = root->rb_node;
+	while(node) {
+		struct mytype *data = container_of(node, struct mytype, node);
+		if(data->key > new)
+			node = node->rb_left;
+		else if(data->key < new)
+			node = node->rb_right;
+		else
+			return data;
+	}
+	return NULL;
+}
 ```
 
