--- a/kernel/memory/7. VMA/4. 红黑树例子.md
+++ b/kernel/memory/7. VMA/4. 红黑树例子.md
@@ -45,5 +45,22 @@ struct mytype *my_serach(struct rb_root *root, int new)
 	}
 	return NULL;
 }
+/*插入一个元素到红黑树中*/
+int my_insert(struct rb_root *root, struct my_type *data)
+{
+	struct rb_node **new = &(root->rb_node);
+	while(*new) {
+		struct mytype *this = container_of(*new, struct mytype, node);
+		parent = *new;
+		if(this->key > data->key)
+			new = &((*new)->rb_left);
+		else if(this->key < data->key)
+			new = &((*new)->rb_right);
+		else
+			return -1;
+	}
+	
+	
+}
 ```
 
