--- a/kernel/memory/7. VMA/4. 红黑树例子.md
+++ b/kernel/memory/7. VMA/4. 红黑树例子.md
@@ -60,7 +60,45 @@ int my_insert(struct rb_root *root, struct my_type *data)
 			return -1;
 	}
 	
-	
+	/*Add new node and rebalance tree. */
+	rb_link_node(&data->node, parent, new);
+	rb_insert_color(&data->node, root);
 }
+
+static int __init my_init(void)
+{
+	int i;
+	struct my_type *data;
+	struct rb_node *node;
+	
+	/*插入元素*/
+	for(i=0; i<20; i+=2) {
+		data = kmalloc(sizeof(struct my_type), GFP_KERNEL);
+		data->key = i;
+		my_insert(&my_tree, data);
+	}
+	
+	/*遍历红黑树，打印所有节点key的值*/
+	for(node = rb_first(&my_tree); node; node = rb_next(node)) {
+		printk("key = %d\n", rb_entry(node, struct my_type, node)->key);
+	}
+	return 0;
+}
+
+static void __exit my_exit(void)
+{
+	struct mytype *data;
+	struct rb_node *node;
+	for(node = rb_first(&my_tree); node; node = rb_next(node)) {
+		data = rb_entry(node, struct mytype, node);
+		if(data) {
+			rb_erase(&data->node, &my_tree);
+			kfree(data);
+		}
+	}
+}
+
+module_init(my_init);
+module_exit(my_exit);
 ```
 
