updat 红黑树例子

--- a/kernel/memory/7. VMA/4. 红黑树例子.md
+++ b/kernel/memory/7. VMA/4. 红黑树例子.md
@@ -102,3 +102,5 @@ module_init(my_init);
 module_exit(my_exit);
 ```
 
+my_tree是红黑树的根节点，my_insert()实现插入一个元素到红黑树中，my_search()根据key来查找节点。内核插入VMA的API函数insert_vm_struct()，其操作红黑树的实现细节类似my_insert()，读者可以仔细对比。
+
