增加brk实现的图片

--- a/kernel/memory/8. malloc/1. brk实现.md
+++ b/kernel/memory/8. malloc/1. brk实现.md
@@ -74,7 +74,7 @@ out:
 }
 ```
 
-
+![](picture/用户进程内存空间布局.png)
 
 在32位Linux内核中，每个用户进程拥有3GB的虚拟空间。内核如何为用户空间来划分这3GB的虚拟空间呢？用户进程的可执行文件由代码段和数据段组成，数据段包括所有静态分配的数据空间，例如全局变量和静态局部变量等。这些空间在可执行文件装载时，内核就为其分配好这些空间，包括虚拟地址和物理页面，并建立好两者的映射关系。如图2.15所示，用户进程的用户栈从3GB虚拟空间的顶部开始，由顶向下延伸，而brk分配的空间是从数据段的顶部end_data到用户栈的底部。所以动态分配空间是从进程的end_data开始，每次分配一块空间，就把这个边界往上推进一段，同时内核和进程都会记录当前边界的位置。
 
@@ -177,6 +177,91 @@ out:
 }
 
 ```
+
+在do_brk()函数中，申请分配内存大小要以页面大小对齐。
+
+第12行代码，get_unmapped_area()函数用来判断虚拟内存空间是否有足够的空间，返回一段没有映射过的空间的起始地址，这个函数会调用到具体的体系结构中实现。
+
+```
+unsigned long
+arch_get_unmapped_area_topdown(struct file *filp, const unsigned long addr0,
+			const unsigned long len, const unsigned long pgoff,
+			const unsigned long flags)
+{
+	struct vm_area_struct *vma;
+	struct mm_struct *mm = current->mm;
+	unsigned long addr = addr0;
+	int do_align = 0;
+	int aliasing = cache_is_vipt_aliasing();
+	struct vm_unmapped_area_info info;
+
+	/*
+	 * We only need to do colour alignment if either the I or D
+	 * caches alias.
+	 */
+	if (aliasing)
+		do_align = filp || (flags & MAP_SHARED);
+
+	/* requested length too big for entire address space */
+	if (len > TASK_SIZE)
+		return -ENOMEM;
+
+	if (flags & MAP_FIXED) {
+		if (aliasing && flags & MAP_SHARED &&
+		    (addr - (pgoff << PAGE_SHIFT)) & (SHMLBA - 1))
+			return -EINVAL;
+		return addr;
+	}
+
+	/* requesting a specific address */
+	if (addr) {
+		if (do_align)
+			addr = COLOUR_ALIGN(addr, pgoff);
+		else
+			addr = PAGE_ALIGN(addr);
+		vma = find_vma(mm, addr);
+		if (TASK_SIZE - len >= addr &&
+				(!vma || addr + len <= vma->vm_start))
+			return addr;
+	}
+
+	info.flags = VM_UNMAPPED_AREA_TOPDOWN;
+	info.length = len;
+	info.low_limit = FIRST_USER_ADDRESS;
+	info.high_limit = mm->mmap_base;
+	info.align_mask = do_align ? (PAGE_MASK & (SHMLBA - 1)) : 0;
+	info.align_offset = pgoff << PAGE_SHIFT;
+	addr = vm_unmapped_area(&info);
+
+	/*
+	 * A failed mmap() very likely causes application failure,
+	 * so fall back to the bottom-up function here. This scenario
+	 * can happen with large stack limits and large mmap()
+	 * allocations.
+	 */
+	if (addr & ~PAGE_MASK) {
+		VM_BUG_ON(addr != -ENOMEM);
+		info.flags = 0;
+		info.low_limit = mm->mmap_base;
+		info.high_limit = TASK_SIZE;
+		addr = vm_unmapped_area(&info);
+	}
+
+	return addr;
+}
+```
+
+arch_get_unmapped_area_topdown()是ARM架构里get_unmapped_area()函数的实现，该函数留给读者自行阅读。
+
+第20行代码中的find_vma_links()函数之前已经阅读过了，它循环遍历用户进程红黑树中的VMAs，然后根据addr来查找最合适的插入红黑树的节点，最终rb_link指针指向最合适节点rb_left或rb_right指针本身的地址。返回0表示查找最合适插入的节点，返回-ENOMEM表示和现有的VMA重叠，这时会调用do_munmap()函数来释放这段重叠的空间。
+
+do_brk()函数中第37行，vma_merge()函数去找有没有可能合并addr附近的VMA。如果没办法合并，那么只能创建一个新的VMA，VMA的地址空间就是[addr, addr+len]。
+
+第53行代码，新创建的VMA需要加入到mm->mmap链表和红黑树中，vma_link()函数实现这个功能，该函数之前已经阅读过了。
+
+回到brk函数中，第39行代码，这里判断flags是否置位VM_LOCKED，这个VM_LOCKED通常从mlockall系统调用中设置而来。如果有，那么调用mm_populate()马上分配物理内存并建立映射。通常用户程序很少使用VM_LOCKED分配掩码。所以brk不会为这个用户进程立马分配物理页面，而是一直将分配物理页面的工作推延到用户进程需要访问这些虚拟页面，发生了缺页中断才会分配物理内存，并和虚拟地址建立映射关系。
+
+
 
 
 
