--- a/kernel/memory/8. malloc/2. VM_LOCK情况.md
+++ b/kernel/memory/8. malloc/2. VM_LOCK情况.md
@@ -344,6 +344,10 @@ EXPORT_SYMBOL(__get_user_pages);
 
 __get_user_pages()函数的参数比较多，其中tsk是进程的struct task_struct数据结构，mm是进程管理的struct mm_struct数据结构，start是进程地址空间VMA的起始地址，nr_pages表示需要分配多少个页面，gup_flags是分配掩码，pages是物理页面的二级指针，vmas是指进程地址空间VMA，nonblocking表示是否等待IO操作。
 
+第18行代码，find_extend_vma()函数查找VMA，它会调用find_vma去查找VMA，如果VMA->vm_start大于查找地址start，那么它会去尝试扩增VMA，把VMA->vm_start边界扩大到start中。如果find_extend_vma()没找到合适的VMA，且start恰好在gate_vma中，那么使用vma页面。当然这种情况比较罕见。gate_vma定义在arch/arm/kernel/process.c文件中。
+
+
+
 
 
 
