--- a/kernel/memory/8. malloc/2. VM_LOCK情况.md
+++ b/kernel/memory/8. malloc/2. VM_LOCK情况.md
@@ -346,9 +346,185 @@ __get_user_pages()函数的参数比较多，其中tsk是进程的struct task_st
 
 第18行代码，find_extend_vma()函数查找VMA，它会调用find_vma去查找VMA，如果VMA->vm_start大于查找地址start，那么它会去尝试扩增VMA，把VMA->vm_start边界扩大到start中。如果find_extend_vma()没找到合适的VMA，且start恰好在gate_vma中，那么使用vma页面。当然这种情况比较罕见。gate_vma定义在arch/arm/kernel/process.c文件中。
 
+```
+[arch/arm/kernel/process.c]
+/*
+ * The vectors page is always readable from user space for the
+ * atomic helpers. Insert it into the gate_vma so that it is visible
+ * through ptrace and /proc/<pid>/mem.
+ */
+static struct vm_area_struct gate_vma = {
+	.vm_start	= 0xffff0000,
+	.vm_end		= 0xffff0000 + PAGE_SIZE,
+	.vm_flags	= VM_READ | VM_EXEC | VM_MAYREAD | VM_MAYEXEC,
+};
+int in_gate_area(struct mm_struct *mm, unsigned long addr)
+{
+	return (addr >= gate_vma.vm_start) && (addr < gate_vma.vm_end);
+}
+```
 
+第38行代码，如果当前进程收到一个SIGKILL信号，那么不需要继续做内存分配，直接报错退出。
 
+第39行代码，cond_resched()判断当前进程是否需要被调度，内核代码通常在while()循环中添加cond_resched()，从而优化系统的延迟。
 
+第41行代码，调用follow_page_mask()查看VMA中的虚拟页面是否已经分配了物理内存。follow_page_mask()是内核内存管理核心API函数follow_page()的具体实现，follow_page()在页面合并和KSM有广泛的应用。
 
+```
+[include/linux/mm.h]
+static inline struct page *follow_page(struct vm_area_struct *vma,
+		unsigned long address, unsigned int foll_flags)
+{
+	unsigned int unused_page_mask;
+	return follow_page_mask(vma, address, foll_flags, &unused_page_mask);
+}
+```
 
+follow_page_mask()函数的实现在mm/gup.c文件中，其中有许多大页面的处理情况，我们暂时忽略大页面的相关代码。follow_page_mask()函数的实现代码量原本比较大，忽略了大页面和NUMA的相关代码后，代码会变得简单很多。
+
+```
+struct page *follow_page_mask(struct vm_area_struct *vma,
+			      unsigned long address, unsigned int flags,
+			      unsigned int *page_mask)
+{
+	pgd_t *pgd;
+	pud_t *pud;
+	pmd_t *pmd;
+	spinlock_t *ptl;
+	struct page *page;
+	struct mm_struct *mm = vma->vm_mm;
+
+	pgd = pgd_offset(mm, address);
+	if (pgd_none(*pgd) || unlikely(pgd_bad(*pgd)))
+		return no_page_table(vma, flags);
+		
+	pud = pud_offset(pgd, address);
+	if (pud_none(*pud))
+		return no_page_table(vma, flags);
+	if (unlikely(pud_bad(*pud)))
+		return no_page_table(vma, flags);
+	
+	pmd = pmd_offset(pud, address);
+	if (pmd_none(*pmd))
+		return no_page_table(vma, flags);
+		
+	return follow_page_pte(vma, address, pmd, flags);
+}
+```
+
+首先通过pgd_offset()辅助函数由mm和地址addr找到当前进程页表的对应PGD页面目录项。用户进程内存的struct mm_struct数据结构的pgd成员（mm->pgd）指向用户进程的页表的基地址。如果PGD表项的内容为空或表项无效，那么报错返回。接着检查PUD和PMD，在2级页表中，PUD和PMD都指向PGD。最后调用follow_page_pte()来检查PTE页表。
+
+```
+
+static struct page *follow_page_pte(struct vm_area_struct *vma,
+		unsigned long address, pmd_t *pmd, unsigned int flags)
+{
+	struct mm_struct *mm = vma->vm_mm;
+	struct page *page;
+	spinlock_t *ptl;
+	pte_t *ptep, pte;
+
+retry:
+	if (unlikely(pmd_bad(*pmd)))
+		return no_page_table(vma, flags);
+
+	ptep = pte_offset_map_lock(mm, pmd, address, &ptl);
+	pte = *ptep;
+	if (!pte_present(pte)) {
+		swp_entry_t entry;
+		/*
+		 * KSM's break_ksm() relies upon recognizing a ksm page
+		 * even while it is being migrated, so for that case we
+		 * need migration_entry_wait().
+		 */
+		if (likely(!(flags & FOLL_MIGRATION)))
+			goto no_page;
+		if (pte_none(pte))
+			goto no_page;
+		entry = pte_to_swp_entry(pte);
+		if (!is_migration_entry(entry))
+			goto no_page;
+		pte_unmap_unlock(ptep, ptl);
+		migration_entry_wait(mm, pmd, address);
+		goto retry;
+	}
+	if ((flags & FOLL_NUMA) && pte_protnone(pte))
+		goto no_page;
+	if ((flags & FOLL_WRITE) && !pte_write(pte)) {
+		pte_unmap_unlock(ptep, ptl);
+		return NULL;
+	}
+
+	page = vm_normal_page(vma, address, pte);
+	if (unlikely(!page)) {
+		if ((flags & FOLL_DUMP) ||
+		    !is_zero_pfn(pte_pfn(pte)))
+			goto bad_page;
+		page = pte_page(pte);
+	}
+
+	if (flags & FOLL_GET)
+		get_page_foll(page);
+	if (flags & FOLL_TOUCH) {
+		if ((flags & FOLL_WRITE) &&
+		    !pte_dirty(pte) && !PageDirty(page))
+			set_page_dirty(page);
+		/*
+		 * pte_mkyoung() would be more correct here, but atomic care
+		 * is needed to avoid losing the dirty bit: it is easier to use
+		 * mark_page_accessed().
+		 */
+		mark_page_accessed(page);
+	}
+	if ((flags & FOLL_MLOCK) && (vma->vm_flags & VM_LOCKED)) {
+		/*
+		 * The preliminary mapping check is mainly to avoid the
+		 * pointless overhead of lock_page on the ZERO_PAGE
+		 * which might bounce very badly if there is contention.
+		 *
+		 * If the page is already locked, we don't need to
+		 * handle it now - vmscan will handle it later if and
+		 * when it attempts to reclaim the page.
+		 */
+		if (page->mapping && trylock_page(page)) {
+			lru_add_drain();  /* push cached pages to LRU */
+			/*
+			 * Because we lock page here, and migration is
+			 * blocked by the pte's page reference, and we
+			 * know the page is still mapped, we don't even
+			 * need to check for file-cache page truncation.
+			 */
+			mlock_vma_page(page);
+			unlock_page(page);
+		}
+	}
+	pte_unmap_unlock(ptep, ptl);
+	return page;
+bad_page:
+	pte_unmap_unlock(ptep, ptl);
+	return ERR_PTR(-EFAULT);
+
+no_page:
+	pte_unmap_unlock(ptep, ptl);
+	if (!pte_none(pte))
+		return NULL;
+	return no_page_table(vma, flags);
+}
+```
+
+第9行代码，检查PMD是否有效。
+
+第12行代码，pte_offset_map_lock()宏通过PMD和地址addr获取pte页表项，这里还获取了一个spinlock锁，这个函数在返回时需要调用pte_unmap_unlock()来释放spinlock锁。
+
+第14行代码，pte_present()判断pte页表中L_PTE_PRESENT位是否置位，L_PTE_PRESENT标志位表示该页在内存中。
+
+第15~30行代码处理页表不在内存中的情况。
+
+- 如果分配掩码没有定义FOLL_MIGRATION，即这个页面没有在页面合并过程中，那么错误返回；
+- 如果pte为空，则错误返回。
+- 如果pte是正在合并中的swap页面，那么调用mirgration_entry_wait()等待这个页面合并完成后再尝试。
+
+第32行代码，如果分配掩码支持可写属性（FOLL_WRITE），但是pte表项只具有只读属性，那么也返回NULL。
+
+第37行代码，vm_normal_page()函数根据pte来返回normal mapping页面的struct page数据结构
 
