update VM_LOCK 情况

--- a/kernel/memory/8. malloc/2. VM_LOCK情况.md
+++ b/kernel/memory/8. malloc/2. VM_LOCK情况.md
@@ -528,3 +528,56 @@ no_page:
 
 第37行代码，vm_normal_page()函数根据pte来返回normal mapping页面的struct page数据结构
 
+```
+struct page *vm_normal_page(struct vm_area_struct *vma, unsigned long addr,
+				pte_t pte)
+{
+	unsigned long pfn = pte_pfn(pte);
+
+	if (HAVE_PTE_SPECIAL) {
+		if (likely(!pte_special(pte)))
+			goto check_pfn;
+		if (vma->vm_ops && vma->vm_ops->find_special_page)
+			return vma->vm_ops->find_special_page(vma, addr);
+		if (vma->vm_flags & (VM_PFNMAP | VM_MIXEDMAP))
+			return NULL;
+		if (!is_zero_pfn(pfn))
+			print_bad_pte(vma, addr, pte, NULL);
+		return NULL;
+	}
+
+	/* !HAVE_PTE_SPECIAL case follows: */
+
+	if (unlikely(vma->vm_flags & (VM_PFNMAP|VM_MIXEDMAP))) {
+		if (vma->vm_flags & VM_MIXEDMAP) {
+			if (!pfn_valid(pfn))
+				return NULL;
+			goto out;
+		} else {
+			unsigned long off;
+			off = (addr - vma->vm_start) >> PAGE_SHIFT;
+			if (pfn == vma->vm_pgoff + off)
+				return NULL;
+			if (!is_cow_mapping(vma->vm_flags))
+				return NULL;
+		}
+	}
+
+	if (is_zero_pfn(pfn))
+		return NULL;
+check_pfn:
+	if (unlikely(pfn > highest_memmap_pfn)) {
+		print_bad_pte(vma, addr, pte, NULL);
+		return NULL;
+	}
+
+	/*
+	 * NOTE! We still have PageReserved() pages in the page tables.
+	 * eg. VDSO mappings can cause them to exist.
+	 */
+out:
+	return pfn_to_page(pfn);
+}
+```
+
+vm_normal_page()函数是一个很有意思的函数，它返回normal mapping页面的struct page数据结构，一些特殊的映射页面是不会返回struct page数据结构的，这些页面不希望被参与到内存管理的一些活动中，例如页面回收、页迁移和KSM等。HAVE_PTE_SPECIAL宏利用PTE页表项的空闲比特位来做一些有意思的事情。在ARM32架构的3级页表和ARM64的代码中会用到这个特性，而ARM32架构的2级页表里没有实现这个特性。
