--- a/kernel/memory/8. malloc/2. VM_LOCK情况.md
+++ b/kernel/memory/8. malloc/2. VM_LOCK情况.md
@@ -581,3 +581,33 @@ out:
 ```
 
 vm_normal_page()函数是一个很有意思的函数，它返回normal mapping页面的struct page数据结构，一些特殊的映射页面是不会返回struct page数据结构的，这些页面不希望被参与到内存管理的一些活动中，例如页面回收、页迁移和KSM等。HAVE_PTE_SPECIAL宏利用PTE页表项的空闲比特位来做一些有意思的事情。在ARM32架构的3级页表和ARM64的代码中会用到这个特性，而ARM32架构的2级页表里没有实现这个特性。
+
+在ARM64中，定义了PTE_SPECIAL比特位，注意这是利用硬件上的空闲比特位来定义的。
+
+```
+[arch/arm64/include/asm/pgtable.h]
+#define PTE_VALID		(_AT(pteval_t, 1) << 0)
+#define PTE_DIRTY		(_AT(pteval_t, 1) << 55)
+#define PTE_SPECIAL		(_AT(pteval_t, 1) << 56)
+#define PTE_WRITE		(_AT(pteval_t, 1) << 57)
+#define PTE_PROT_NONE		(_AT(pteval_t, 1) << 58) /* only when !PTE_VALID */
+```
+
+内核中通常使用pte_mkspecial()宏来设置PTE_SPECIAL软件定义的比特位，主要用于有以下用途：
+
+- 内核的零页面zero page。
+- 大量的驱动程序使用remap_pfn_range()函数，例如匿名页面，page cache和共享页面等。
+- vm_insert_page()/vm_insert_pfn()映射内核页面到用户空间。
+
+vm_normal_page()函数把page页面分为两个阵营，一个是normal page，另一个是special page。
+
+（1）normal page通常指正常mapping的页面，例如匿名页面、page cache和共享内存页面等。
+
+（2）special page通常指不正常mapping的页面，这些页面不希望参与内存管理的回收和合并的功能，例如映射如下特性的页面。
+
+- VM_IO：为IO设备映射内存。
+- VM_PFN_MAP：纯PFN映射。
+- VM_MIXEDMAP：固定映射。
+
+回到vm_normal_page()映射，
+
