--- a/kernel/memory/9. mmap/1. mmap概述.md
+++ b/kernel/memory/9. mmap/1. mmap概述.md
@@ -6,3 +6,56 @@ void *mmap(void *addr, size_t length, int prot, int flags, int fd, off_t offset)
 int munmap(void *addr, size_t length);
 ```
 
+- addr：用于指定映射到进程空间的起始地址，为了应用程序的可移植性，一般设置为NULL，让内核来选择一个合适的地址。
+- length：表示映射到进程地址空间的大小
+- prot：用于设置内核映射区域的读写属性等。
+- flags：用于设置内存映射的属性，例如共享映射、私有映射等。
+- fd：表示这个是一个文件映射，fd是打开文件的句柄。
+- offset:在文件映射时，表示文件的偏移量。
+
+
+
+prot参数通常表示映射页面的的读写权限，可以有如下参数组合：
+
+- PROT_EXEC：表示映射的页面是可以执行的。
+- PROT_READ：表示映射的页面是可以读取的。
+- PROT_WRITE：表示映射的页面是可以写入的。
+- PROT_NONE：表示映射的页面是不可访问的。
+
+
+
+flags参数也是一个重要的参数，有如下常见的参数：
+
+- MAP_SHARED：创建一个共享映射的区域。多个进程可以通过共享映射方式来映射一个文件，这样其他进程也可以看到映射内容的改变，修改后的内容会同步到磁盘文件中。
+- MAP_PRIVATE：创建一个私有的写时复制的映射。多个进程可以通过私有映射的方式来映射一个文件，这样其他进程不会看到映射内容的改变，修改后的内容也不会同步到磁盘文件中。
+- MAP_ANONYMOUS：创建一个匿名映射，即没有关联到文件的映射。
+- MAP_FIXED：使用参数addr创建映射，如果内核无法映射指定地址addr，那么mmap会返回失败，参数addr要求按页对齐。如果addr和length指定的进程地址空间和已有的VMA区域重叠，那么内核会调用do_munmap()函数把这段重叠区域销毁，然后重新映射新的内容。
+- MAP_POPULATE：对于文件映射来说，会提前预读文件内容到映射区域，该特性只支持私用映射。
+
+
+
+参数fd可以看出mmap映射是否和文件相关联，因此Linux内核中映射可以分为匿名映射和文件映射。
+
+- 匿名映射：没有映射对应的相关文件，这种映射的内存区域的内容会被初始化为0。
+- 文件映射：映射和实际文件相关联，通常是把文件的内容映射到进程地址空间，这样应用程序就可以像操作进程地址空间一样读写文件。
+
+最后根据文件关联性和映射区域是否共享等属性，又可以分为如下4种，见表2.1。
+
+​													mmap映射类型
+
+|             | 映射类型                        | 映射类型                                    |
+| ----------- | ----------- | ---- |
+|          | 私有映射                        | 共享映射 |
+| 匿名映射 | 私有匿名映射-通常用于内存分配 | 共享匿名映射-通常用于进程间共享内存 |
+| 文件映射 | 私有文件映射-通常用于加载动态库 | 共享文件映射-通常用于内存映射IO，进程间通信 |
+
+1. 私有匿名映射
+
+当使用参数fd=-1且flags=MAP_ANONYMOUS | MAP_PRIVATE时，创建的mmap映射是私有匿名映射。私有匿名映射最常见的用途是在glibc分配大块内存中，当需要的分配的内存大于MMAP_THREASHOLD(128KB)时，glibc会默认使用mmap代替brk来分配内存。
+
+2. 共享匿名映射
+
+当使用参数fd=-1且flags=MAP_ANONYMOUS | MAP_SHARED。在这种情况下，创建共享匿名映射。共享匿名映射让相关进程共享一块内存区域，通常用于父子进程的之间通信。
+
+创建共享匿名映射有如下两种方式：
+
