--- a/kernel/memory/9. mmap/1. mmap概述.md
+++ b/kernel/memory/9. mmap/1. mmap概述.md
@@ -59,3 +59,28 @@ flags参数也是一个重要的参数，有如下常见的参数：
 
 创建共享匿名映射有如下两种方式：
 
+（1）fd=-1且flags= MAP_ANONYMOUS|MAP_SHARED。在这种情况下，do_mmap_pgoff()->mmap()函数最终调用shmem_zero_setup()来打开一个"/dev/zero"特殊的设备文件。
+
+（2）另外一个是直接打开"/dev/zero"设备文件，然后使用这个文件句柄来创建mmap。
+
+
+
+3. 私有文件映射
+
+私有文件映射时flags的标志位被设置为MAP_PRIVATE，那么就会创建私有文件映射。
+
+私有文件映射的最常用的场景是加载动态共享库。
+
+
+
+4. 共享文件映射
+
+创建文件映射时flags的标志位被设置为MAP_SHARED，那么就会创建共享文件映射。如果prot参数指定了PROT_WRITE，那么打开文件需要制定O_RDWR标志位。共享文件映射通常有如下场景：
+
+（1）读写文件：
+
+把文件内容映射到进程地址空间，同时对映射的内容做了修改，内核的回写机制（writeback）最终会把修改的内容同步到磁盘中。
+
+（2）进程间通信：
+
+进程之间的进程地址空间相互隔离，一个进程不能访问到另外一个进程的地址空间。如果多个进程都同时映射到一个相同的文件，就实现了多进程间的共享内存的通信。如果一个进程对映射内容做了修改，那么另外的进程是可以看到的。
