--- a/kernel/memory/9. mmap/2. 小结.md
+++ b/kernel/memory/9. mmap/2. 小结.md
@@ -4,3 +4,21 @@ mmap机制在 Linux内核中实现的代码框架和brk机制非常类似,其中
 
 除了 Dirty Cow之外,下面收集了几个有意思的小问题。
 
+问题1:请阅读 Linux内核中mmap相关代码,找出第二次调用mmap会成功的原因? 下面是 strace抓取到的log信息。
+
+```
+# strace捕捉某个app调用mmap的情况 
+mmap(0x20000000, 819200, PROT_READ | PROT_WRITE,MAP_PRIVATE | MAP_FIXED | MAP_ ANONYMOUS,-1, 0) =0x20000000 
+....
+mmap(0x20000000, 4096, PROT_READ | PROT_WRITE , MAP_PRIVATE | MAP_FIXED| MAP_ANONYMOUS, -1, 0)=0x20000000
+```
+
+这里以指定的地址0x20000000来建立一个私有的匿名映射，为什么第二次调用mmap时，Linux内核没有捕捉到地址重叠并返回失败呢？
+
+查看mmap系统调用的代码实现，在do_mmappgoff()->mmap_region())函数里有如下一段代码：
+
+```
+[sys_mmap_pgoff()->vm_mmap_pgoff()->do_mmap_pgoff()->mmap_region()]
+unsigned long mmap_region()
+```
+
