--- a/kernel/memory/9. mmap/2. 小结.md
+++ b/kernel/memory/9. mmap/2. 小结.md
@@ -22,3 +22,53 @@ mmap(0x20000000, 4096, PROT_READ | PROT_WRITE , MAP_PRIVATE | MAP_FIXED| MAP_ANO
 unsigned long mmap_region()
 ```
 
+这里再一次看到find_vma links())函数，在第2.7节中讲述VMA操作时已经阅读过，这是一个非常重要的函数，下面再次来看这个函数。
+
+```
+
+static int find_vma_links(struct mm_struct *mm, unsigned long addr,
+		unsigned long end, struct vm_area_struct **pprev,
+		struct rb_node ***rb_link, struct rb_node **rb_parent)
+{
+	struct rb_node **__rb_link, *__rb_parent, *rb_prev;
+
+	__rb_link = &mm->mm_rb.rb_node;
+	rb_prev = __rb_parent = NULL;
+
+	while (*__rb_link) {
+		struct vm_area_struct *vma_tmp;
+
+		__rb_parent = *__rb_link;
+		vma_tmp = rb_entry(__rb_parent, struct vm_area_struct, vm_rb);
+
+		if (vma_tmp->vm_end > addr) {
+			/* Fail if an existing vma overlaps the area */
+			if (vma_tmp->vm_start < end)
+				return -ENOMEM;
+			__rb_link = &__rb_parent->rb_left;
+		} else {
+			rb_prev = __rb_parent;
+			__rb_link = &__rb_parent->rb_right;
+		}
+	}
+
+	*pprev = NULL;
+	if (rb_prev)
+		*pprev = rb_entry(rb_prev, struct vm_area_struct, vm_rb);
+	*rb_link = __rb_link;
+	*rb_parent = __rb_parent;
+	return 0;
+}
+```
+
+find_vma links())函数会遍历该进程中所有的VMAs，当检查到当前要映射的区域和已有的VMA有些许的重叠时，该函数都返回-ENOMEM，然后在mmap_region()函数里调用do_munmap())函数，把这段将要映射区域先销毁，然后重新映射，这就是第二次映射同样的地址并没有返回错误的原因。
+
+问题2：在一个播放系统中同时打开几十个不同的高清视频文件，发现播放有些卡顿，打开视频文件是用mmap函数，请简单分析原因。
+
+使用mmap来创建文件映射时，由于只建立了进程地址空间VMA，并没有马上分配page cache和建立映射关系。因此当播放器真正读取文件时，产生了缺页中断才去读取文件内容到page cache中。这样每次播放器真正读取文件时，会频繁地发生缺页中断，然后从文件中读取磁盘内容到page cache中，导致磁盘读性能比较差，从而造成播放视频的卡顿。
+
+有些读者认为在创建mmap映射之后调用madvise(add,len,MADV_WILLNEED|MADV_SEQUENTIAL)可能会对文件内容提前进行了预读和顺序，读所有利于改善磁盘读性能，但实际情况是：
+
+- MADV_WILLNEED会立刻启动磁盘IO进行预读，仅预读指定的长度，因此在读取新的文件区域时，要重新调用MADV_WILLNEED，显然它不适合流媒体服务的场景，内核默认的预读功能更适合问题2的场景。MADV_WILLNEED比较适合内核很难预测接下来要预读哪些内容的场景，例如随机读。
+- MADV_SEQUENTIAL适合问题2的场景，但是内核默认的预读功能也能很好的工作。对于问题2，能够有效提高流媒体服务I/O性能的方法是增大内核的默认预读窗口，现在内核默认预读的大小是128KB，可以通过“blockdev  --setra”命令来修改。
+
