--- a/kernel/memory/10. 缺页中断/1. 缺页中断处理.md
+++ b/kernel/memory/10. 缺页中断/1. 缺页中断处理.md
@@ -1,3 +1,8 @@
 在之前介绍malloc()和mmap()两个用户态API函数的内核实现时，**我们发现它们只建立了进程地址空间，在用户空间里可以看到虚拟内存，但没有建立虚拟内存和物理内存之间的映射关系。**当进程访问这些还没有建立映射关系的虚拟内存时，处理器自动触发一个页异常（也称为“缺页中断”），Linux内核必须处理此异常。缺页异常是内存管理当中最复杂和重要的一部分，需要考虑很多的细节，包括匿名页面、KSM页面、page cache页面、写时复制、私有映射和共享映射等。
 
 缺页异常处理依赖于处理器的体系结构，因此缺页异常底层的处理流程在内核代码中特定体系结构的部分。下面以ARMv7为例来介绍底层缺页异常处理的过程。
+
+当在数据访问周期里进行存储访问时发生异常，基于ARMv7-A架构的处理器会跳转到异常向量表中的Data abort向量中。Data abort的底层汇编处理和irq中断相似，有兴趣的读者可以阅读第5.1.4节。汇编处理流程为vectors_start->vector_dabt->__dabt_usr/__dabt_svc->dabt_helper->v7_early_abort，我们从v7_early_abort开始介绍。
+
+
+
