增加缺页中断

--- a/kernel/memory/10. 缺页中断/1. 缺页中断处理.md
+++ b/kernel/memory/10. 缺页中断/1. 缺页中断处理.md
@@ -4,5 +4,54 @@
 
 当在数据访问周期里进行存储访问时发生异常，基于ARMv7-A架构的处理器会跳转到异常向量表中的Data abort向量中。Data abort的底层汇编处理和irq中断相似，有兴趣的读者可以阅读第5.1.4节。汇编处理流程为vectors_start->vector_dabt->__dabt_usr/__dabt_svc->dabt_helper->v7_early_abort，我们从v7_early_abort开始介绍。
 
+```
+ENTRY(v7_early_abort)
+	mrc	p15, 0, r1, c5, c0, 0		@ get FSR
+	mrc	p15, 0, r0, c6, c0, 0		@ get FAR
+	b	do_DataAbort
+ENDPROC(v7_early_abort)
+```
 
+ARM的MMU中有如下两个与存储访问失效相关的寄存器。
 
+- 失效状态寄存器(Data Fault Status Register,FSR)。
+- 失效地址寄存器（Data Fault Address Register，FAR)。
+
+当发生存储访问失效时，失效状态寄存器FSR会反映所发生的存储失效的相关信息，包括存储访问所属域和存储访问类型等，同时失效地址寄存器会记录访问失效的虚拟地址。汇编函数v7early abort通过协处理器的寄存器c5和c6读取出FSR和FAR寄存器后，直接调用C语言的do_DataAbort(）函数。
+
+```
+asmlinkage void __exception
+do_DataAbort(unsigned long addr, unsigned int fsr, struct pt_regs *regs)
+{
+	const struct fsr_info *inf = fsr_info + fsr_fs(fsr);
+	struct siginfo info;
+
+	if (!inf->fn(addr, fsr & ~FSR_LNX_PF, regs))
+		return;
+
+	pr_alert("Unhandled fault: %s (0x%03x) at 0x%08lx\n",
+		inf->name, fsr, addr);
+	show_pte(current->mm, addr);
+
+	info.si_signo = inf->sig;
+	info.si_errno = 0;
+	info.si_code  = inf->code;
+	info.si_addr  = (void __user *)addr;
+	arm_notify_die("", regs, &info, fsr, 0);
+}
+```
+
+首先struct fsr_info数据结构用于描述一条失效状态对应的处理方案。
+
+```
+struct fsr_info {
+	int	(*fn)(unsigned long addr, unsigned int fsr, struct pt_regs *regs);
+	int	sig;
+	int	code;
+	const char *name;
+};
+```
+
+其中，name成员表示这条失效状态的名称，sig表示处理失败时Linux内核要发送的信号类型，fn表示修复这条失效状态的函数指针。
+
+fsr_info[]数组列出了常见的地址失效处理方案，以页面转换失效（page translation fault)和页面访问权限失效为例，它们最终的解决方案是调用do_page_fault()来修复。
